Summary of important user-visible changes for Bio-DB-EMBL
---------------------------------------------------------

{{$NEXT}}
  * First release after split from bioperl-live.