@@ -2,7 +2,7 @@
 #
 # BioPerl module for Bio::DB::EMBL
 #
-# Please direct questions and support issues to <bioperl-l@bioperl.org> 
+# Please direct questions and support issues to <bioperl-l@bioperl.org>
 #
 # Cared for by Heikki Lehvaslaiho <heikki-at-bioperl-dot-org>
 #
@@ -74,15 +74,15 @@ of the Bioperl mailing lists.  Your participation is much appreciated.
   bioperl-l@bioperl.org                  - General discussion
   http://bioperl.org/wiki/Mailing_lists  - About the mailing lists
 
-=head2 Support 
+=head2 Support
 
 Please direct usage questions or support issues to the mailing list:
 
 I<bioperl-l@bioperl.org>
 
-rather than to the module maintainer directly. Many experienced and 
-reponsive experts will be able look at the problem and quickly 
-address it. Please include a thorough description of the problem 
+rather than to the module maintainer directly. Many experienced and
+reponsive experts will be able look at the problem and quickly
+address it. Please include a thorough description of the problem
 with code and data examples if at all possible.
 
 =head2 Reporting Bugs
@@ -111,7 +111,6 @@ use strict;
 use vars qw($MODVERSION %HOSTS %FORMATMAP  $DEFAULTFORMAT);
 
 $MODVERSION = '0.2';
-use Bio::DB::RefSeq;
 
 use base qw(Bio::DB::DBFetch);
 
@@ -156,65 +155,5 @@ sub new {
 
     return $self;
 }
-
-
-=head2 Bio::DB::WebDBSeqI methods
-
-Overriding WebDBSeqI method to help newbies to retrieve sequences.
-EMBL database is all too often passed RefSeq accessions. This
-redirects those calls. See L<Bio::DB::RefSeq>.
-
-
-=head2 get_Stream_by_acc
-
-  Title   : get_Stream_by_acc
-  Usage   : $seq = $db->get_Seq_by_acc([$acc1, $acc2]);
-  Function: Gets a series of Seq objects by accession numbers
-  Returns : a Bio::SeqIO stream object
-  Args    : $ref : a reference to an array of accession numbers for
-                   the desired sequence entries
-  Note    : For GenBank, this just calls the same code for get_Stream_by_id()
-
-=cut
-
-sub get_Stream_by_acc {
-    my ($self, $ids ) = @_;
-    my $newdb = $self->_check_id($ids);
-    if ($newdb && $newdb->isa('Bio::DB::RefSeq')) {
-	return $newdb->get_seq_stream('-uids' => $ids, '-mode' => 'single');
-    } else {
-	return $self->get_seq_stream('-uids' => $ids, '-mode' => 'single');
-    }
-}
-
-
-=head2 _check_id
-
-  Title   : _check_id
-  Usage   : 
-  Function: 
-  Returns : A Bio::DB::RefSeq reference or throws
-  Args    : $id(s), $string
-
-=cut
-
-sub _check_id {
-    my ($self, $ids) = @_;
-
-    # NT contigs can not be retrieved
-    $self->throw("NT_ contigs are whole chromosome files which are not part of regular".
-		 "database distributions. Go to ftp://ftp.ncbi.nih.gov/genomes/.") 
-	if $ids =~ /NT_/;
-
-    # Asking for a RefSeq from EMBL/GenBank
-
-    if ($ids =~ /N._/) {
-	$self->warn("[$ids] is not a normal sequence entry but a RefSeq entry.".
-		   " Redirecting the request.\n")
-	    if $self->verbose >= 0;
-	return  Bio::DB::RefSeq->new(-verbose => $self->verbose);
-    }
-}
-
 
 1;
